--- a/src/pages/care-plan/su-view-reports.html
+++ b/src/pages/care-plan/su-view-reports.html
@@ -89,6 +89,9 @@
       }
       #reportSelector{
         width:75%;
+        --paper-tabs:{
+          font-size:var(--report-tabs-font-size);
+        };
         --paper-tabs-selection-bar-color:#009688;
         --paper-tabs-container:{
           border-bottom:2px solid #979797;
@@ -145,7 +148,7 @@
         font-weight:bold;
       }
       #dateSelector{
-        width:50%;
+        width:var(--report-date-selector-width, 50%);
       }
     </style>
 
