--- a/src/pages/care-plan/su-medication.html
+++ b/src/pages/care-plan/su-medication.html
@@ -107,20 +107,24 @@
         background-color:#F5F2F2;
         margin:20px 0 20px 0;
         background-repeat:no-repeat;
-        background-size:40px 40px;
-        background-position:50px;
+        background-size:var(--time-chunk-bar-background-size, 40px 40px);
+        background-position:var(--time-chunk-bar-background-position, 50px);
         text-align:center;
         display:flex;
         flex-direction:row;
+        --paper-item:{
+          padding:0;
+        };
       }
       .timeChunkLabel{
         flex-grow:2;
         text-transform:uppercase;
         color:#009688;
         text-align:left;
-        padding-left:110px;
+        margin-left:var(--time-chunk-label-margin-left, 140px);
         font-weight:500;
-        font-size:24px;
+        font-size:var(--time-chunk-label-font-size, 24px);
+        margin-right:5px;
       }
       .timeChunkLabel:hover{
         cursor:pointer;
@@ -128,14 +132,14 @@
       .timeChunkTime{
         flex-grow:1;
         font-weight:bold;
-        font-size:20px;
+        font-size:var(--time-chunk-time-font-size, 20px);
         text-transform:uppercase;
         opacity:.54;
         text-align:right;
-        padding-right:5%;
+        margin: 0 5px 0 5px;
       }
       .timeChunkButton{
-        width:5%;
+        margin:calc(var(--time-chunk-bar-background-position) - 5);
       }
       #timeChunkModal{
         margin:0;
@@ -150,8 +154,7 @@
         color:#009688;
       }
       .offset-table{
-        margin-left:110px;
-        margin-right:110px;
+        margin-left:var(--time-chunk-bar-background-position, 140px)
         padding:0;
       }
       .left-partial{
