added in dynamic padding and crop values for guuey-photo-editor

--- a/src/elements/guuey-photo-editor/demo/index.html
+++ b/src/elements/guuey-photo-editor/demo/index.html
@@ -21,9 +21,7 @@
       <h3>Basic guuey-photo-editor demo</h3>
       <demo-snippet>
         <template>
-          <guuey-photo-editor value="{{photo}}"></guuey-photo-editor>
-          <h2>Result</h2>
-          <iron-image src="{{photo}}"></iron-image>
+          <guuey-photo-editor crop-width="200" crop-height="200"></guuey-photo-editor>
         </template>
       </demo-snippet>
     </div>
