--- a/src/pages/admin/ad-profile.html
+++ b/src/pages/admin/ad-profile.html
@@ -96,7 +96,8 @@
           </iron-image>
 
           <guuey-photo-editor
-            rectangle
+            crop-width="241"
+            crop-height="160"
             class="imageButton"
             value="{{homePhoto}}">
           </guuey-photo-editor>
