--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -404,6 +404,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     #appsDialog{
       max-height:80%;
+      overflow:hidden;
     }
     #notifyDialog{
       max-width:100%;
