--- a/src/elements/login-recent-user/login-recent-user.html
+++ b/src/elements/login-recent-user/login-recent-user.html
@@ -22,6 +22,7 @@
         display:flex;
         flex-direction:row;
         align-items:center;
+        padding:10px;
       }
       .mainRow:hover{
         opacity:.7;
