--- a/src/pages/default/def-login.html
+++ b/src/pages/default/def-login.html
@@ -259,6 +259,7 @@
         left:50%;
         transform: translate(-50%, -50%);
         transition:all .5s;
+        overflow:auto;
       }
       .recent-users-visible{
         top:50%;
